# cmd_sandbox-rs

./: Cargo.toml  FS_001_IMPLEMENTATION_PLAN.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  NEW_TESTS.md  README.md  REFACTORING.md  RELEASE.md  TESTING.md  TODO.md  install-build.sh  install.sh  policy_config.json  test-all-policies.sh  test-sandbox.sh  test.sh
.github/workflows/: release.yml
Docker_imgs/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-run.sh
cmd-sandbox/: Cargo.toml  build.rs
cmd-sandbox-common/: Cargo.toml
cmd-sandbox-common/src/: lib.rs  policy_shared.rs
cmd-sandbox-ebpf/: Cargo.toml
cmd-sandbox-ebpf/src/: common.rs  filesystem.rs  lib.rs  main.rs  memory.rs  network.rs  security.rs
cmd-sandbox-tests/: Cargo.toml
cmd-sandbox-tests/src/: fs_tests.rs  main.rs  mem_tests.rs  net_tests.rs  sec_tests.rs
cmd-sandbox-tests/test_helpers/: README.md  test_kernel_access  test_kernel_access.c  test_net_config  test_net_config.c  test_stack_limit  test_stack_limit.c
cmd-sandbox/src/: cgroup.rs  ebpf_loader.rs  filesystem_setup.rs  main.rs  monitoring.rs  policy.rs  policy_loader.rs  resource_limits.rs
cmd-sandbox/src/policy_impl/: fs.rs  mem.rs  mod.rs  net.rs  sec.rs
docs/: policies.tex
