[package]
name = "cmd-sandbox-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
cmd-sandbox-common = { path = "../cmd-sandbox-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "cmd-sandbox-ebpf"
path = "src/main.rs"
